# bazelinit

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  main.go
cmd/: BUILD.bazel  root.go
lang/cpp/: BUILD.bazel  setup.go
lang/golang/: BUILD.bazel  setup.go
lib/lang/cpp/: BUILD.bazel  setup.go
lib/lang/cpp/templates/: BUILD.tmpl  MODULE.bazel.tmpl
lib/lang/golang/: BUILD.bazel  setup.go  template.go  validate.go  validate_test.go
lib/lang/golang/templates/: BUILD.tmpl  go.mod.tmpl
lib/scaffold/: BUILD.bazel  scaffold.go
lib/template/: BUILD.bazel  template.go  template_test.go
