load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/yashsoodini/bazelinit/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/lang/cpp",
        "//lib/lang/golang",
        "//vendor/github.com/spf13/cobra",
    ],
)
